# central-logger

./: .gitignore  .qmlls.ini  AGENTS.md  CMakeLists.txt  HANDOFF.md  README.md  build_installer.ps1  huong_dan_dong_goi.md
.github/workflows/: build-release.yml  ci.yml  dev-build.yml
cmake/: CPackOptions.cmake
convert_tool/: main.cpp
docs/: README.md  thiet_ke_db.md
docs/THAM_KHAO_REPO_CU/: README.md
docs/THAM_KHAO_REPO_CU/phase1/: 01-feature-matrix.md  02-pain-points.md  03-scope-document.md  04-non-functional-requirements.md  05-python-cpp-migration-map.md  06-qml-logic-inventory.md  07-manual-test-with-hardware.md  README.md
docs/adr/: 0001-db.md
docs/contracts/: modbus-map-v1.md  rest-config-contract-v1.md
docs/plan/: agent-prompt.txt  chien_luoc_material3_cho_qt_desktop.md  tasks-6-24-agent-prompts.md  ui-modernization-agent-prompts.md
docs/report/: 2026-05-26-deep-audit.md  2026-05-26-fix-backlog-agent-prompts.md  2026-05-27_m3_ui_migration_walkthrough.md  2026-05-28_config-push-windows-walkthrough.md  2026_05_27_BUGS_SURVEY_CURRENT.md  README.md
docs/ui/: material3-component-guidelines.md
installer_build/config/: config.xml
packaging/: README.md
packaging/linux/: bump_version.py  central-logger  central-logger.desktop  ci_configure.sh  cpack_deb.sh  deploy.sh  install_qt_aqt.sh  resolve_qt_prefix.sh  sync_cmake_version.py
packaging/windows/: build_installer.ps1  deploy.ps1  huong_dan_dong_goi.md  install_qt_aqt.ps1
packaging/windows/convert_tool/: CMakeLists.txt
scripts/: cpack_deb.sh  sync_cmake_version.py
src/app/: CMakeLists.txt  main.cpp
src/app/qml/: FatalStartup.qml  Main.qml
src/app/qml/views/: DashboardView.qml  HistoryView.qml  LoggerDetailView.qml  LoggersView.qml  SettingsView.qml
src/components/: CMakeLists.txt
src/components/chart/: ChartGraphsTheme.qml  ChartGraphsView.qml  ChartHoverTooltip.qml  ChartLinePointMarker.qml  ChartTimeSeriesPanel.qml
src/components/layout/: AlertDialog.qml  AppNotifier.qml  AppScrollBar.qml  AppToastHost.qml  DateField.qml  DatePickerPopup.qml  ElevatedPane.qml  EmptyStatePlaceholder.qml  FormNotice.qml  InlineBanner.qml  MessageDetailDialog.qml  SectionHeader.qml  StatCard.qml  TableContentStack.qml
src/components/logger/: LoggerFormDialog.qml  RecentEventListItem.qml  SensorStatusChip.qml  StatusBadge.qml
src/components/shell/: AppButton.qml  AppNavigationRail.qml  AppTopBar.qml  IconToolButton.qml  MaterialIcons.qml  NavItem.qml  RailCircleButton.qml  ThemeToggle.qml  UiIcon.qml  WindowControls.qml
src/components/status/: SensorStatusColumn.qml  StatusChip.qml
src/components/table/: AppTableView.qml  TableCellBackground.qml  TableHeaderCell.qml
src/core/: AppState.cpp  AppState.h  CMakeLists.txt  DashboardController.cpp  DashboardController.h  DesktopService.cpp  DesktopService.h  HostValidator.cpp  HostValidator.h  LoggerDetailViewModel.cpp  LoggerDetailViewModel.h  LoggerFormController.cpp  LoggerFormController.h  LoggerListModel.cpp  LoggerListModel.h  LoggerSearchProxyModel.cpp  LoggerSearchProxyModel.h  SettingsController.cpp  SettingsController.h
src/core/charts/: ChartDisplayLimits.h  ChartPresentation.cpp  ChartPresentation.h  ChartQueryService.cpp  ChartQueryService.h  PollHistoryStore.cpp  PollHistoryStore.h
src/core/events/: EventLevels.h  RecentEventsModel.cpp  RecentEventsModel.h
src/core/history/: HistoryTableModel.cpp  HistoryTableModel.h  HistoryViewModel.cpp  HistoryViewModel.h
src/core/sensors/: SensorLiveRow.h  SensorMerger.cpp  SensorMerger.h  SensorMonitoringTableModel.cpp  SensorMonitoringTableModel.h  SensorSnapshotCache.cpp  SensorSnapshotCache.h  SensorStatusHelper.cpp  SensorStatusHelper.h
src/data/: CMakeLists.txt
src/data/db/: Database.cpp  Database.h
src/data/db/migrations/: 002_logger_sensor_attach_di.sql  003_logger_sensor_all_parents.sql  004_app_settings_history_flush.sql  005_drop_maintenance_mode.sql  006_logger_sensor_decimals.sql  _TEMPLATE_rebuild_table.sql
src/data/db/schema/: 001_initial.sql
src/data/models/: AppSettings.h  HistoryRow.h  LoggerInfo.h  LoggerSensor.h  SensorReading.h  SystemEvent.h
src/data/repositories/: EventRepository.cpp  EventRepository.h  LoggerRepository.cpp  LoggerRepository.h  SensorCatalogRepository.cpp  SensorCatalogRepository.h  SensorReadingRepository.cpp  SensorReadingRepository.h  SettingsRepository.cpp  SettingsRepository.h  SqlHelper.h
src/network/: CMakeLists.txt  README.md
src/network/modbus/: ModbusBridge.cpp  ModbusBridge.h  ModbusDataDispatcher.cpp  ModbusDataDispatcher.h  ModbusMapParser.h  ModbusPollPlan.h  ModbusService.cpp  ModbusService.h  ModbusTypes.h
src/network/rest/: RestConfigParser.h  RestConfigService.cpp  RestConfigService.h
src/network/workers/: HistoryWriterWorker.cpp  HistoryWriterWorker.h
src/theme/: AppColors.qml  AppTheme.qml  AppTypography.qml  AttachDiType.qml  CMakeLists.txt  OperationalStatus.qml  QuickControlsConfig.qml  ThemeSetup.cpp  ThemeSetup.h
src/utils/: AppConstants.h  CMakeLists.txt  DateTimeUtils.cpp  DateTimeUtils.h  HostValidator.cpp  HostValidator.h
src/utils/charts/: ChartDisplayLimits.h
src/utils/events/: EventLevels.h
src/utils/network/: HostValidator.cpp  HostValidator.h
src/utils/os/: WindowsFramelessHelper.cpp  WindowsFramelessHelper.h
src/utils/sensors/: AttachDiTypeHelper.cpp  AttachDiTypeHelper.h
src/utils/time/: DateTimeUtils.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  test_chart_presentation.cpp  test_chart_query_service.cpp  test_dashboard_controller.cpp  test_host_validator.cpp  test_logger_detail_view_model.cpp  test_logger_form_save.cpp  test_poll_history_store.cpp  test_recent_events_model.cpp  test_sensor_merger.cpp  test_sensor_monitoring_table_model.cpp
tests/data/: CMakeLists.txt  test_database_migrations.cpp  test_database_repositories.cpp  test_retention_purge.cpp
tests/network/: CMakeLists.txt  test_history_writer_worker.cpp  test_modbus_bridge_batch.cpp  test_modbus_map_parser.cpp  test_rest_config_parser.cpp  test_rest_config_service_report.cpp
(+3 files in other folders)
